--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			</div>
 			<div id="col2">
 				<p>I'm working on it, I promise. Meanwhile, I deleted everything, and forced myself to stop procrastinating.</p>
-				<p>I believe in happy accidents, careful arrangements and longlasting relationships. The future is waiting for us to build it.</p>
+				<p>I believe that we can do great things. The future is waiting for us to build it.</p>
 			</div>
 		</div>
 	</section>
